--- a/src/output.css
+++ b/src/output.css
@@ -669,6 +669,14 @@ video {
   gap: 0.75rem;
 }
 
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-40{
+  gap: 10rem;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
